version 1.0 商议之后的框架基本确定，CourseService和CourseDao功能有些混淆，还有待理顺。CourseBook改名为Course.